--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,136 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: #e6ebe0;
+  color: #333;
+  font-family: Arial, sans-serif;
+}
+
+.header {
+  text-align: center;
+  margin-bottom: 24px;
+}
+
+.title {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.highlight {
+  color: #0772b7
+}
+
+.subtitle {
+  font-size: 1.2rem;
+  color: #666;
+}
+
+.main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.heroImage {
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 24px;
+}
+
+.containerBusquedas {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.tituloBusquedas {
+  font-size: 1.8rem;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.sectionSubtitulos{
+  font-size: 1rem;
+  color: #666;
+  margin-bottom: 16px;
+}
+
+.buttonsHome {
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+}
+
+.buttonExplorarRecetas {
+  background-color: #0772b7;
+  color: #fff;
+  padding: 12px 24px;
+  border-radius: 6px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: background-color 0.3s;
+}
+
+.buttonExplorarRecetas:hover {
+  background-color: #0b9af9;
+}
+
+.buttonLogin{
+  background-color: #e0e0e0;
+  color: #333;
+  padding: 12px 24px;
+  border-radius: 6px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: background-color 0.3s;
+}
+
+.buttonLogin:hover {
+  background-color: #d6d6d6;
+}
+
+.features {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 24px;
+  margin-top: 24px;
+  max-width: 960px;
+  margin-bottom: 20px;
+}
+
+.feature {
+  display: flex;
+  align-items: start;
+  gap: 16px;
+}
+
+.featureTitulo {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+
+.featureDescripcion {
+  font-size: 1rem;
+  color: #666;
+}
+.footer {
+  text-align: center;
+  padding: 16px;
+  background-color: #0772b7;
+  color: #333;
+  font-size: 1rem;
+  margin-top: auto; 
 }
