--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -135,3 +135,100 @@ body {
   font-size: 1rem;
   margin-top: auto; 
 }
+.divPadreForm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #e6ebe0;
+
+}
+
+.formLogin {
+  background-color: #ffffff; 
+  width: 400px; 
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); 
+  border-radius: 12px; 
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1 {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #333; 
+  margin-bottom: 20px;
+}
+
+.contenedorInput {
+  display: flex;
+  flex-direction: column;
+  width: 90%; 
+  row-gap: 20px;
+  margin-top: 10px;
+}
+
+.contenedorInput label {
+  font-size: 0.95rem;
+  color: #555; 
+}
+
+.contenedorInput input[type="email"],
+.contenedorInput input[type="password"],
+.contenedorInput input[type="text"] {
+  padding: 12px;
+  border-radius: 10px;
+  border: 1px solid #ddd; 
+  box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.1); 
+  font-size: 1rem;
+}
+
+.contenedorInput input:focus {
+  border-color: #007bff;
+  outline: none;
+  box-shadow: 0px 0px 4px rgba(0, 123, 255, 0.5); 
+}
+
+.formLogin input[type="submit"] {
+  width: 100%;
+  padding: 12px;
+  margin-top: 20px;
+  border: none;
+  border-radius: 8px;
+  background-color: #0772b7;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.formLogin input[type="submit"]:hover {
+  background-color: #0056b3;
+}
+
+.linkRegistro > a {
+  display: block; /* Para que ocupe todo el ancho */
+  margin-top: 10px;
+  font-size: 0.9rem;
+  color: #007bff;
+  text-decoration: none;
+  text-align: center;
+  transition: color 0.3s ease, transform 0.2s ease;
+}
+
+.linkRegistro > a:hover {
+  color: #0056b3;
+  transform: scale(1.05);
+}
+label{
+  font-size: 1rem;
+  font-weight: bold;
+}
+h1{
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #0772b7;
+
+}
