--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -7,6 +7,8 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #e6ebe0;
+  
 }
 .container {
   display: flex;
@@ -15,6 +17,7 @@ body {
   background-color: #e6ebe0;
   color: #333;
   font-family: Arial, sans-serif;
+  margin-left: 8%;
 }
 
 .header {
