--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -361,6 +361,10 @@ li button:nth-child(2):hover {
   display: flex;
   flex-direction: column;
   gap: 12px;
+  transition: transform 0.3s ease-in-out;
+}
+.recipeCard:hover {
+  transform: scale(1.05); 
 }
 
 .recipeTitle {
