--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -21,7 +21,9 @@ body {
   background-color: #e6ebe0;
   color: #333;
   font-family: Arial, sans-serif;
-  margin-left: 8%;
+  margin: 0 auto;         /* Centrado horizontal */
+  max-width: 1200px;      /* Máximo ancho para pantallas grandes */
+  padding: 0 20px;        /* Espacio interno en pantallas pequeñas */
 }
 
 .header {
